spacing issue fixed

--- a/nic-graham-site/resources/css/style.css
+++ b/nic-graham-site/resources/css/style.css
@@ -1,21 +1,19 @@
 * {
     padding: 0;
     margin: 0;
-}
-.inline-block {
-    /* display: inline-block; */
+    font-family: poppins;
 }
 /* CSS HEX */
 :root {
     --gray: #2a2b2aff;
     --platinum: #dfe0e2ff;
-    --platinumtranslucent: rgba(223, 224, 226, 0.801);
+    --platinumtranslucent: rgba(223, 224, 226, 0.8);
     --brick: #f05d5eff;
     --yellow: #ffbc0aff;
     --purple: #7353baff;
 }
 body {
-    background-color: #27262b;
+    background-color: var(--gray);
     margin-top: 8vh;
 }
 /* HEADER BAR */
@@ -23,16 +21,15 @@ body {
     /* color: antiquewhite; */
     background-image: linear-gradient(
         to bottom,
-        rgba(0, 0, 0, 0.8),
+        rgba(0, 0, 0, 1),
         rgba(0, 0, 0, 0)
     );
-    position: fixed;
+    position: absolute;
     top: 0;
-    left: 0;
+    /* left: 0; */
     width: 100%;
     height: 8vh;
     border: none;
-    /* border-bottom: 2px solid black; */
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -41,9 +38,10 @@ body {
     z-index: 99999;
 }
 .header-logo {
-    margin-left: 3vw;
+    margin-left: 1vw;
     height: 10vh;
     width: auto;
+    height: 8vh;
 }
 .header-links {
     display: flex;
@@ -57,6 +55,7 @@ body {
 .header-link {
     color: var(--yellow);
     text-decoration: none;
+    font-size: 1vw;
 }
 .header-link:hover {
     cursor: pointer;
@@ -66,29 +65,25 @@ body {
 .puter::after {
     content: "BETA";
     font-size: 50%;
-    top: -15;
-    color: red;
-    position: fixed;
-    top: -16;
-    right: -5;
-}
-.logo {
-    color: var(--yellow);
+    color: var(--brick);
+    position: absolute;
+    /* top: 0; */
+    /* right: -20; */
 }
 /* HEADER STOP */
-.first-page {
+.section-1 {
     color: var(--yellow);
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-image: url(/nic-graham-site/public/img/background.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    position: fixed;
+    position: absolute;
     top: 0;
     display: grid;
     grid-template-columns: 8vw 8vw 8vw 8vw 8vw 8vw 8vw 8vw 8vw 8vw 8vw 8vw;
-    grid-template-rows: 8vw 8vw 8vw 8vw 8vw 8vw 8vw 8vw;
+    grid-template-rows: 30vh 30vh 30vh;
     gap: 30px;
 }
 
@@ -104,8 +99,13 @@ body {
 }
 .top-section-header {
     grid-column: 1 / span 4;
-    grid-row: 4 / span 2;
+    grid-row: 3 / span 2;
     display: flex;
     flex-direction: column;
     align-content: center;
+}
+.section-2 {
+    position: relative;
+    top: 92vh;
+    width: 50vw;
 }
